Bug 258858 - Not possible to define default folder for sent mail, drafts and templates
Summary: Not possible to define default folder for sent mail, drafts and templates
Status: VERIFIED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-04 23:50 UTC by Björn Balazs
Modified: 2011-02-15 19:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Björn Balazs 2010-12-04 23:50:19 UTC
Version:           unspecified (using Devel) 
OS:                Linux

In the mobile version the user has no possibility to define the default folder for sent mail, drafts and templates.

Reproducible: Didn't try
Comment 1 Tobias Koenig 2010-12-07 13:00:41 UTC
SVN commit 1204462 by tokoe:

Bring back the settings to configure sent/drafts/template folder.

The blocking widget FolderRequester has been moved to mailcommon/
in the meantime and any dependency to kmail has been removed.

BUG: 258858


 M  +1 -8      identitydialog.cpp  
 M  +1 -0      kcm_kpimidentities/CMakeLists.txt  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1204462