Bring back the settings to configure sent/drafts/template folder.

The blocking widget FolderRequester has been moved to mailcommon/
in the meantime and any dependency to kmail has been removed.

BUG: 258858

svn path=/trunk/KDE/kdepim/kmail/; revision=1204462